feat(문제5): 주어진 수를 단위별로 분류하는 기능 추가